<resources>
    <string name="app_name">Rahuri Store</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="no_account_yet_signup_now">No Account Yet? SignUp Now</string>
    <string name="personal_details">Personal Details</string>
    <string name="fname">FirstName <font color="red">*</font></string>
    <string name="lname">LastName <font color="red">*</font></string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="add_to_cart">Add To Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="total">Total</string>
    <string name="checkout">CheckOut</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="add_items_to_it_now">Add Item To It Now</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="see_you_again">See You Again!</string>
</resources>