<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity1">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:gravity="center"
                android:text="@string/personal_details"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="left"
                android:text="@string/fname"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fname"
                style="@style/ClientTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="left"
                android:text="@string/lname"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lname"
                style="@style/ClientTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="left"
                android:text="@string/contact_number"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_contact_no"
                style="@style/ClientTextInputLayout"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="@dimen/_20sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="left"
                android:text="@string/address"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/ClientTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="left"
                android:text="@string/password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/ClientTextInputLayout"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_username"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="7"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn_background_drawable"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>